# fitbites-backend

./: .env.example  .env.local  .gitignore  .railwayignore  DEPLOY-NOW.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-STATUS.md  Dockerfile  Makefile  QUICK-DEPLOY.md  RAILWAY-DEPLOYMENT.md  SEED-PRODUCTION.md  alembic.ini  delete_low_quality_recipes.py  docker-compose.prod.yml  docker-compose.yml  fitbites.db  fix_auth_tables.py  fix_auth_tables.sql  openapi.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  seed.py  seed_extra.py  seed_premium.py  seed_production_db.py  test_tracking.py  venv  verify_auth_tables.py
alembic/: env.py
config/: settings.py
docs/: BARCODE_API.md  DEPLOYMENT.md  MONITORING-SETUP.md  RECIPE_ORCHESTRATOR.md  instagram-automation.md  youtube-automation.md
scripts/: analytics_cli.py  backup.sh  deploy-railway.sh  deploy.sh  enrich_affiliates.py  generate-secrets.sh  generate_dashboard.py  railway-deploy.sh  scrape_and_store.py  scrape_structured.py  seed-production.sh  seed_analytics.py  seed_recipes.py  test_live_scrape.py
src/: auth.py  logging_config.py  startup_checks.py
static/: dashboard.html  index.html  metrics.json
tests/: conftest.py  test_admin_auth.py  test_affiliate.py  test_affiliate_compliance.py  test_affiliate_performance.py  test_affiliate_redirect.py  test_analytics.py  test_analytics_pipeline.py  test_api.py  test_auth_refresh.py  test_avatar.py  test_barcode.py  test_cache.py  test_cache_middleware.py  test_collections.py  test_comments.py  test_data_privacy.py  test_data_retention.py  test_e2e_flow.py  (+34 more)
(+99 files in other folders)
